--- a/Debug.qsf
+++ b/Debug.qsf
@@ -533,6 +533,9 @@ set_global_assignment -name SLD_FILE "C:/Users/jspark/Desktop/cs3220-examples/Pr
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE Timer.v
+set_global_assignment -name VERILOG_FILE Switch.v
+set_global_assignment -name VERILOG_FILE Key.v
 set_global_assignment -name VERILOG_FILE CPU.v
 set_global_assignment -name VERILOG_FILE Processor.v
 set_global_assignment -name VERILOG_FILE Memory.v
